Fixes: Twitter scrollbar and box shadows
Fixes: Twitter scrollbar and box shadows

--- a/vsfWeb/commons/static/scss/base/base.scss
+++ b/vsfWeb/commons/static/scss/base/base.scss
@@ -91,7 +91,7 @@ body {
 
 .titleBarContent{
 	border-radius: 8px;
-	box-shadow: 0 12px 18px -12px rgba(0, 0, 0, 0.27), 0 3px 21px 0px rgba(0, 0, 0, 0.12), 0 6px 12px -6px rgba(0, 0, 0, 0.12)
+	box-shadow: 0 12px 18px -12px rgba(0, 0, 0, 0.27), 0 3px 21px 0px rgba(0, 0, 0, 0.12), 0 6px 12px -6px rgba(0, 0, 0, 0.12);
 	background: #f2f2f2;
 	height: 45px;
 	padding-left: 35px;
